--- a/app/locales/zh-cn.yaml
+++ b/app/locales/zh-cn.yaml
@@ -19,8 +19,8 @@ strings:
             password: 密码
             confirm_password: 确认密码
     tagthumb:
-        item: '%S 项'
-        items: '%S 项'
+        item: '%ls 项'
+        items: '%ls 项'
     sort:
         header: 排序方式
         ctime_desc: 最近创建
