--- a/app/locales/zh-tw.yaml
+++ b/app/locales/zh-tw.yaml
@@ -136,8 +136,11 @@ strings:
             title: 緩存
             stats: '當前縮略圖緩存共佔用 %s 的空間'
             description: >-
-                本應用會在你瀏覽圖片列表的時候自動緩存縮略圖，
+                我們會在你瀏覽圖片列表的時候自動緩存縮略圖，
                 以便在下次瀏覽圖片時能夠快速呈現縮略圖。
+        scaling:
+            title: 縮放
+            description: 設置一個合適的縮放比例，以改善界面的視覺體驗
         private_space:
             title: 私人空間
             sources_title: 私密源
@@ -171,4 +174,4 @@ strings:
                 title: 確定要移除該源文件夾？
                 content: 一旦移除後，該源文件夾內的文件相關信息將一同被移除。
         about: 關於此應用
-        copyright: © 2017 LC's Software，保留所有權利。
+        copyright: © 2018 LC's Software，保留所有權利。
