chore: add privacy link

--- a/app/locales/en-us.yaml
+++ b/app/locales/en-us.yaml
@@ -168,6 +168,7 @@ strings:
         language: Language
         language_description: Change language
         license: License
+        privacy: Privacy
         website: Website
         feedback: Feedback
         sourcecode: Source code
