--- a/app/locales/zh-cn.yaml
+++ b/app/locales/zh-cn.yaml
@@ -163,6 +163,7 @@ strings:
         language: 语言
         language_description: 更改界面的显示语言
         license: 许可协议
+        privacy: 隐私策略
         website: 官方网站
         feedback: 问题反馈
         sourcecode: 源代码
