--- a/app/locales/en-us.yaml
+++ b/app/locales/en-us.yaml
@@ -23,6 +23,9 @@ strings:
     tagthumb:
         item: '%ls item'
         items: '%ls items'
+    taskitem:
+        preparing: 'Preparing...'
+        completed: 'Completed! %zu files processed'
     sort:
         header: Sort by
         ctime_desc: Recently created
@@ -36,6 +39,7 @@ strings:
         password_too_long: Password is too long
         password_empty: Password can not be empty
         passwords_not_match: Passwords not match
+        detector_init_failed: Detector initialization failed
     datetime:
         format: 'DATE MM DD, YYYY hh:mm'
         year_format: MM YYYY
@@ -142,7 +146,11 @@ strings:
                 render thumbnail images in the next time you browse the pictures.
         detector:
             title: Detector
+            models:
+                title: Pre-Trained Model
+                text: Select a model to change the detector's recognition speed, accuracy, and object classes set
             tasks:
+                title: Tasks
                 training:
                     title: Training
                     text: Learn the annotated pictures to enhanced detection capability
