--- a/app/locales/zh-cn.yaml
+++ b/app/locales/zh-cn.yaml
@@ -6,7 +6,7 @@ strings:
         cancel: 取消
         search: 搜索
         clear: 清除
-        cleaning: 正在清除...
+        clearing: 正在清除...
         reset_password: 重置密码
         restart: 重新开始
         start: 开始
@@ -48,6 +48,7 @@ strings:
         detector_init_failed: 检测器初始化失败
         creating_model: 正在创建模型...
         removing_model: 正在删除模型...
+        clearing_cache: 正在清除缓存...
     datetime:
         format: YYYY年MM月DD日，DATE hh:mm
         year_format: YYYY年MM月
